# physics-toolkit

./: .cspell.json  .envrc  .gitignore  .ruff.toml  mkdocs.yaml  pyproject.toml
.github/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml
.github/workflows/: release.yaml
docs/: SUMMARY.md
docs/css/: katex.css
scripts/docs/: gen-ref-pages.py
src/fem/: __init__.pyi
src/fem/body/: __init__.pyi  _abc.py  _koiter.py  _stable_neo_hookean.py
src/fem/element/: __init__.pyi
src/fem/element/common/: __init__.pyi  _strain.py
src/fem/element/tetra/: _deformation_gradient.py  _grad_op.py  _volume.py
src/fem/element/triangle/: __init__.pyi  _area.py  _fundamental_form.py
src/fem/field/: _field.py
src/fem/material/: __init__.pyi
src/fem/material/grad/: __init__.pyi  _abc.py  _stable_neo_hookean.py
src/fem/problem/: __init__.pyi  _problem.py
src/fem/region/: __init__.pyi  _region.py  _tetra.py
src/fem/utils/: __init__.pyi  _as_dict_of_array.py  _jit.py  _jit.pyi
src/ptk/: __init__.py
src/ptk/element/tetra/: __init__.pyi  _deformation_gradient.py  _grad_op.py  _volume.py
src/ptk/element/triangle/: _area.py
src/ptk/utils/: __init__.pyi
tests/: conftest.py
tests/element/tetra/: test_deformation_gradient.py  test_grad_op.py  test_volume.py
tests/element/triangle/: test_area.py  test_fundamental_form.py
