#:schema https://json.schemastore.org/pyproject.json
# vim: syntax=toml
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["icecream>=2.1.3"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = []
description = "Add your description here"
keywords = []
license = "MIT"
name = "physics-toolkit"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.urls]
"Changelog" = "https://github.com/liblaf/physics-toolkit/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/liblaf/physics-toolkit"
"Issue Tracker" = "https://github.com/liblaf/physics-toolkit/issues"
"Release Notes" = "https://github.com/liblaf/physics-toolkit/releases"
"Source Code" = "https://github.com/liblaf/physics-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["src/ptk"]
