#:schema https://json.schemastore.org/pyproject.json
# vim: syntax=toml
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["icecream~=2.1.3"]
docs = [
  "black~=24.10.0",
  "mdx-truly-sane-lists~=1.3",
  "mkdocs-gen-files~=0.5.0",
  "mkdocs-git-committers-plugin-2~=2.4.1",
  "mkdocs-git-revision-date-localized-plugin~=1.3.0",
  "mkdocs-literate-nav~=0.6.1",
  "mkdocs-material[imaging]~=9.5.49",
  "mkdocs-section-index~=0.3.9",
  "mkdocstrings-python~=1.13.0",
  "mkdocstrings~=0.27.0",
  "mkdocs~=1.6.1",
]
test = ["pytest~=8.3.4"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "jaxtyping~=0.2.36",
  "lazy-loader~=0.4",
  "numpy~=2.2.1",
  "pyvista~=0.44.2",
  "scipy~=1.15.0",
]
description = "Add your description here"
keywords = []
license = "MIT"
name = "liblaf-fem"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.urls]
"Changelog" = "https://github.com/liblaf/fem/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/liblaf/fem"
"Issue Tracker" = "https://github.com/liblaf/fem/issues"
"Release Notes" = "https://github.com/liblaf/fem/releases"
"Source Code" = "https://github.com/liblaf/fem"

[tool.hatch.build.targets.wheel]
packages = ["src/fem"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.dependencies]
jax = { version = "~=0.4.35" }
jaxlib = { build = "*cuda*" }

[tool.pixi.environments]
default = { features = ["dev", "docs", "test"] }

[tool.pixi.project]
channel-priority = "disabled"
channels = ["anaconda", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
liblaf-fem = { editable = true, path = "." }

[tool.pixi.system-requirements]
cuda = "12"
libc = { family = "glibc", version = "2.35" }
linux = "6.5"
